new toString method for pattern create knowledge writes pattern and labels to file